--- a/src/components/Collections/Collections.module.css
+++ b/src/components/Collections/Collections.module.css
@@ -1,8 +1,14 @@
+/* .collections_wrapper{
+  height: 28.5rem;
+  width: 100%;
+  margin: 15rem 0 5rem;
+  display: flex;
+  justify-content: space-between;
+} */
 .collections_text {
-  height: 70%;
-  width: 35rem;
+  height:65%;
+  width: 32%;
   background-color: var(--ash);
-  background-size: 50% 50%;
   position: relative;
   border-radius: 0.8rem;
 }
@@ -20,7 +26,8 @@
   border: none;
   cursor: pointer;
 }
-.collections_text_button span {
+.collections_text_button a{
+  text-decoration: none;
   font-family: Manrope;
   font-style: normal;
   font-weight: bold;
@@ -33,8 +40,12 @@
   opacity: 0.5;
   margin-right: 1rem;
 }
+.collections_text_button a:hover{
+  color:#D87D4A;
+
+}
 .collections_text_div {
-  margin-top: 12rem;
+  margin-top: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,4 +60,15 @@
   letter-spacing: 1.28571px;
   text-transform: uppercase;
   color: #000000;
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .collections_text_div{
+    height: 50%;
+  }
+  .collections_text img {
+  position: absolute;
+  top: -4rem;
+  left: 15%;
+  width: 70%;
+}
 }
