--- a/src/components/NavBar/Nav.module.css
+++ b/src/components/NavBar/Nav.module.css
@@ -5,12 +5,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 0.5px solid var(--ash-white);
 }
 .nav_links {
   display: flex;
 }
-
+.hamburger{
+  display: none;
+}
 .nav_links li {
   margin: 0 3rem;
   list-style: none;
@@ -34,4 +36,18 @@
   background: transparent;
   border: none;
   cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .links_container{
+    display: none;
+  }
+  .hamburger{
+    display: block;
+    width: 5rem;
+  }
+  .logo_container{
+    display: flex;
+    width: 100rem;
+    align-items: center;
+  }
 }
