--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,11 @@
 html {
   font-size: 62.5%;
 }
-
+@media screen and (min-width: 481px) and (max-width: 767px) {
+  html{
+    font-size: 50%;
+  }
+} 
 body {
   margin: 0;
   font-family: "Manrope", "Roboto", sans-serif;
