--- a/src/components/BestGear/BestGear.module.css
+++ b/src/components/BestGear/BestGear.module.css
@@ -29,8 +29,8 @@
   font-family: Manrope;
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
-  line-height: 25px;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
   color: #000000;
   mix-blend-mode: normal;
   opacity: 0.5;
@@ -56,5 +56,31 @@
   height: 50%;
   padding: 10%;
   text-align: center;
+}
+}
+@media screen and (max-width: 480px){
+.container{
+  flex-direction: column-reverse;
+  height: 65rem;
+}
+.container_image{
+  background-image: url("../../assets/shared/mobile/image-best-gear.jpg");
+  width: 100%;
+  height: 50%;
+}
+.container_text{
+  width: 100%;
+  height: 50%;
+  padding: 7%;
+  text-align: center;
+}
+.container_text h2{
+  letter-spacing: 1.5;
+  line-height: 1.2;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+}
+.container_text p{
+  font-size: 1.5rem;
 }
 }
