--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -111,3 +111,46 @@
     margin: 10rem 0 0;
   }
 }
+
+@media screen and  (max-width: 480px) {
+    .header{
+    background-image: url('../../assets/home/mobile/image-header.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding:0 3rem;
+    height: 70rem;
+    width: auto;
+  }
+  .nav_content{
+    text-align: center;
+    width: 90%;
+    margin: 12rem auto 0;
+  }
+  .nav_content h5{
+    font-size: 1.5rem;
+  }
+  .nav_content h2{
+    font-size: 3.5rem;
+    letter-spacing: 1px;
+    line-height: normal;
+    margin-bottom: 2rem;
+  }
+  .nav_content p{
+    font-size: 1.2rem;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+    width: 70%;
+  }
+  .nav_content button{
+      padding: 1.5rem 3rem;
+      font-size: 1.5rem;
+  }
+  .speaker_container{
+    flex-direction: column;
+    justify-content: space-between;
+    height: 90rem;
+     padding: 0;
+    margin: 0;
+  }
+}
