--- a/src/components/SPEAKER1/Speaker1.module.css
+++ b/src/components/SPEAKER1/Speaker1.module.css
@@ -15,7 +15,6 @@
   background-position: right 17rem top -5rem;
 }
 
-
 .container_image {
   width: 50%;
 }
@@ -26,7 +25,7 @@
   width: 35rem;
 }
 
-.container_text h2 {
+.container_text h2{
   font-family: inherit;
   font-style: normal;
   font-weight: bold;
@@ -38,7 +37,7 @@
   width: 5rem;
   margin-bottom: 3rem;
 }
-.container_text p {
+.container_text p{
   font-family: Manrope;
   font-style: normal;
   font-weight: 500;
@@ -196,12 +195,14 @@
 }
 .container_second {
   background-image: url("../../assets/home/tablet/image-speaker-zx7.jpg");
+  background-position: center;
 }
 .container_second_text {
   padding: 8rem;
 }
 .container_third_image {
   background-image: url("../../assets/home/tablet/image-earphones-yx1.jpg");
+  background-position: center;
 }
 .container_third_text {
   width: 47%;
@@ -209,4 +210,64 @@
   background-color: var(--ash);
   border-radius: 8px;
 }
+}
+@media screen and (max-width: 480px){
+  .container {
+    height: 60rem;
+    flex-direction: column;
+    background-position: center top -15rem;
+    padding: 0;
+    margin-bottom: 2rem;
+  }
+
+  .container_image {
+  width:100%;
+  text-align: center;
+}
+.container_image img{
+  width: 40%;
+}
+.container_text {
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container_text h2{
+  width: 20rem;
+  font-size: 3rem;
+  line-height: normal;
+  text-align: center;
+}
+.container_text p{
+  width: 30rem;
+  text-align: center;
+}
+.container_second {
+  background-image: url("../../assets/home/mobile/image-speaker-zx7.jpg");
+  background-position: center;
+}
+.container_second_text {
+  padding: 10rem 3rem;
+  width: 90%;
+}
+.container_third {
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 50rem;
+  margin-bottom: 8rem;
+}
+.container_third_image {
+  background-image: url("../../assets/home/mobile/image-earphones-yx1.jpg");
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  margin-bottom: 2rem;
+}
+.container_third_text {
+  width: 100%;
+  padding: 4rem 2rem;
+}
+
 }
