--- a/src/index.css
+++ b/src/index.css
@@ -11,17 +11,25 @@
   --black-light: #101010;
   --ash: #f1f1f1;
   --ash-white: #fafafa;
+  --padding-desktop: 0 16.5rem;
+  --padding-tablet: 0 5rem;
+  --padding-mobile: 0 2rem;
 }
 html {
   font-size: 62.5%;
 }
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  html {
+    font-size: 55%;
+  }
+}
 @media screen and (min-width: 481px) and (max-width: 767px) {
-  html{
+  html {
     font-size: 50%;
   }
-} 
+}
 @media screen and (max-width: 480px) {
-  html{
+  html {
     font-size: 60%;
   }
 }
@@ -31,4 +39,3 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
