--- a/src/components/Collections/Collections.module.css
+++ b/src/components/Collections/Collections.module.css
@@ -1,5 +1,5 @@
 .collections_text {
-  height:65%;
+  height: 65%;
   width: 32%;
   background-color: var(--ash);
   position: relative;
@@ -19,7 +19,7 @@
   border: none;
   cursor: pointer;
 }
-.collections_text_button a{
+.collections_text_button a {
   text-decoration: none;
   font-family: Manrope;
   font-style: normal;
@@ -33,9 +33,8 @@
   opacity: 0.5;
   margin-right: 1rem;
 }
-.collections_text_button a:hover{
-  color:#D87D4A;
-
+.collections_text_button a:hover {
+  color: #d87d4a;
 }
 .collections_text_div {
   margin-top: 10rem;
@@ -54,30 +53,49 @@
   text-transform: uppercase;
   color: #000000;
 }
-@media screen and (min-width: 481px) and (max-width: 768px) {
-  .collections_text_div{
+.speaker_container {
+  height: 28.5rem;
+  width: 100%;
+  margin: 15rem 0 5rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 16.5rem;
+}
+@media screen and (min-width: 481px) and (max-width: 1150px) {
+  .collections_text_div {
     height: 50%;
   }
   .collections_text img {
-  position: absolute;
-  top: -4rem;
-  left: 15%;
-  width: 70%;
-}
+    position: absolute;
+    top: -4rem;
+    left: 15%;
+    width: 70%;
+  }
+  .speaker_container {
+    padding: 0 5rem;
+    margin: 10rem 0 0;
+  }
 }
 @media screen and (max-width: 480px) {
-   .collections_text{
-    width:90%;
+  .collections_text {
+    width: 90%;
     margin: 10% auto;
     height: 90%;
   }
   .collections_text img {
-  position: absolute;
-  top: -4rem;
-  left: 25%;
-  width: 50%;
-}
-.collections_text_div h3 {
-  margin-bottom: 3%;
-}
+    position: absolute;
+    top: -4rem;
+    left: 25%;
+    width: 50%;
+  }
+  .collections_text_div h3 {
+    margin-bottom: 3%;
+  }
+  .speaker_container {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 90rem;
+    padding: 0;
+    margin: 0;
+  }
 }
