--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,12 +3,13 @@
   width: 100%;
   background-color: #191919;
   background-image: url("../../assets/home/desktop/image-hero.jpg");
-  padding: 0 16.5rem;
+  padding: var(--padding-desktop);
+  margin-top: -8rem;
 }
 
 .nav_content {
   width: 40%;
-  margin-top: 15rem;
+  padding-top: 18rem;
 }
 
 .nav_content h5 {
@@ -67,90 +68,77 @@
 .nav_content button:hover {
   background-color: var(--primary-light);
 }
-.speaker_container {
-  height: 28.5rem;
-  width: 100%;
-  margin: 15rem 0 5rem;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 16.5rem;
-}
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
-  .header{
-    background-image: url('../../assets/home/tablet/image-header.jpg');
+@media screen and (min-width: 481px) and (max-width: 1150px) {
+  .header {
+    background-image: url("../../assets/home/tablet/image-header.jpg");
     background-position: center;
     background-size: contain;
-    padding:0 5rem;
+    padding: 0 5rem;
     height: 75rem;
     width: auto;
+    margin-top: -20rem;
+    background-repeat: no-repeat;
   }
-  .nav_content{
+  .nav_content {
     text-align: center;
     width: 60%;
     margin: 15rem auto 0;
   }
-  .nav_content h5{
+  .nav_content h5 {
+    margin-top: 3rem;
     font-size: 2rem;
   }
-  .nav_content h2{
+  .nav_content h2 {
     font-size: 4.5rem;
     letter-spacing: 3px;
     margin-bottom: 2rem;
   }
-  .nav_content p{
+  .nav_content p {
     font-size: 1.5rem;
     margin-bottom: 4rem;
   }
-  .nav_content button{
-      padding: 2rem 4rem;
-      font-size: 1.8rem;
-  }
-  .speaker_container {
-    padding: 0 5rem;
-    margin: 10rem 0 0;
+  .nav_content button {
+    padding: 2rem 4rem;
+    font-size: 1.8rem;
   }
 }
 
-@media screen and  (max-width: 480px) {
-    .header{
-    background-image: url('../../assets/home/mobile/image-header.jpg');
+@media screen and (max-width: 480px) {
+  .header {
+    background-image: url("../../assets/home/mobile/image-header.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    padding:0 3rem;
+    padding: 0 3rem;
     height: 70rem;
     width: auto;
+margin-top: -20rem;
   }
-  .nav_content{
+  .nav_content {
     text-align: center;
     width: 90%;
-    margin: 12rem auto 0;
+    margin: 10rem auto 0;
+    
   }
-  .nav_content h5{
+  .nav_content h5 {
     font-size: 1.5rem;
+    margin-top: 5rem;
   }
-  .nav_content h2{
+  .nav_content h2 {
     font-size: 3.5rem;
     letter-spacing: 1px;
     line-height: normal;
     margin-bottom: 2rem;
   }
-  .nav_content p{
+  .nav_content p {
     font-size: 1.2rem;
     margin: 0 auto;
     margin-bottom: 4rem;
     width: 70%;
   }
-  .nav_content button{
-      padding: 1.5rem 3rem;
-      font-size: 1.5rem;
-  }
-  .speaker_container{
-    flex-direction: column;
-    justify-content: space-between;
-    height: 90rem;
-     padding: 0;
-    margin: 0;
+  .nav_content button {
+    padding: 1.5rem 3rem;
+    font-size: 1.5rem;
   }
 }
