--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -111,15 +111,15 @@
     background-repeat: no-repeat;
     background-size: contain;
     padding: 0 3rem;
-    height: 70rem;
+    height: 65rem;
     width: auto;
-margin-top: -20rem;
+    margin-top: -20rem;
+    margin-bottom: 2rem;
   }
   .nav_content {
     text-align: center;
     width: 90%;
     margin: 10rem auto 0;
-    
   }
   .nav_content h5 {
     font-size: 1.5rem;
